If region capture is cancelled, close Spectacle

This fixes the bug that keeps Spectacle running, happens when it's launched via either spectacle --region --background or Meta + Shift + Prt.sc.

BUG: 432006